[package]
name = "rvview"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = [ "derive", "env" ] }
anyhow = { version = "1.0.89" }
windows-core = "0.58.0"
windows = { version = "0.58.0", features = [ 
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
]}
